--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,6 +1,16 @@
 ########################################################
 # HTTP => 301 => HTTPS
 ########################################################
+upstream suzoo_express {
+    server suzoo_express:3000;
+}
+upstream suzoo_react {
+    server suzoo_react:3000;
+}
+upstream suzoo_fastapi {
+    server suzoo_fastapi:8000;
+}
+
 server {
     listen 80;
     listen [::]:80;
@@ -11,23 +21,6 @@ server {
 ########################################################
 # HTTPS 服務 (443)
 ########################################################
-# 1) upstream 定義在 server 區塊外 (建議置於 http 內)
-#   但若無法自行改 Dockerfile，可直接先寫在此最上方或
-#   http {} 也行。為簡潔，此處示範放在 server 區塊外。
-upstream suzoo_express {
-    # 您 Docker Compose 的 express 服務名稱 => suzoo_express
-    # Express app.listen(3000)
-    server suzoo_express:3000;
-}
-
-upstream suzoo_react {
-    server suzoo_react:3000;
-}
-
-upstream suzoo_fastapi {
-    server suzoo_fastapi:8000;
-}
-
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
@@ -43,16 +36,13 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
-    # React SPA => suzoo_react:3000
-    # (React dev server)
+    # React SPA => suzoo_react
     ####################################################
     location / {
-        proxy_pass http://suzoo_react; 
-        # 修正: 使用 upstream suzoo_react (而非硬碼 suzoo_react:3000)
+        proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
@@ -62,7 +52,6 @@ server {
 
     ####################################################
     # Express => suzoo_express
-    # (Express port=3000)
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
@@ -106,7 +95,6 @@ server {
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi/;
-        # 註: 建議保留 / => .../ 以免路由少一層
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
