--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,16 @@
+# frontend/Dockerfile
 FROM node:18-slim
 
 WORKDIR /app
 
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-COPY package.json ./
+COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
 
+# 建置 React
 RUN npm run build
 RUN npm install -g serve
 
