--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,5 +1,5 @@
 ########################################################
-# HTTP => 301 => HTTPS
+# upstream 區塊
 ########################################################
 upstream suzoo_express {
     server suzoo_express:3000;
@@ -11,6 +11,9 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
+########################################################
+# HTTP => 301 => HTTPS
+########################################################
 server {
     listen 80;
     listen [::]:80;
@@ -36,12 +39,15 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
+    # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
     # React SPA => suzoo_react
+    # 加入 try_files /index.html 配合前端路由
     ####################################################
     location / {
+        try_files $uri $uri/ /index.html;
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
@@ -52,6 +58,7 @@ server {
 
     ####################################################
     # Express => suzoo_express
+    # (原本已有)
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
@@ -61,6 +68,13 @@ server {
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    # 您若要示範硬編碼 your_node_container:3000，可改成：
+    # location /auth/ {
+    #     proxy_pass http://your_node_container:3000/auth/;
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $host;
+    # }
 
     location /membership/ {
         proxy_pass http://suzoo_express;
