--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -22,16 +22,16 @@ server {
 }
 
 ########################################################
-# HTTPS 服務 (443)
+# HTTPS (443)
 ########################################################
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # =============================
+    # ==========================
     # SSL 憑證設定 (Let's Encrypt)
-    # =============================
+    # ==========================
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_session_timeout 5m;
@@ -39,15 +39,16 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
     # React SPA => suzoo_react
-    # 加入 try_files /index.html 配合前端路由
+    # 改用 @reactfallback 避免 rewrite cycle
     ####################################################
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ @reactfallback;
+    }
+    location @reactfallback {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
         proxy_set_header Host              $host;
@@ -57,8 +58,16 @@ server {
     }
 
     ####################################################
+    # 以下 location 若您要改成硬寫:
+    # location /auth/ {
+    #   proxy_pass http://your_node_container:3000/auth/;
+    #   proxy_set_header Host $host;
+    # }
+    # 則請自行取捨
+    ####################################################
+
+    ####################################################
     # Express => suzoo_express
-    # (原本已有)
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
@@ -68,13 +77,6 @@ server {
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    # 您若要示範硬編碼 your_node_container:3000，可改成：
-    # location /auth/ {
-    #     proxy_pass http://your_node_container:3000/auth/;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Host $host;
-    # }
 
     location /membership/ {
         proxy_pass http://suzoo_express;
