--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -30,7 +30,7 @@ server {
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
     # ==========================
-    # SSL 憑證設定 (Let's Encrypt)
+    # SSL 憑證 (Let's Encrypt)
     # ==========================
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
@@ -43,7 +43,7 @@ server {
 
     ####################################################
     # React SPA => suzoo_react
-    # 改用 @reactfallback 避免 rewrite cycle
+    # (Dev Server or build mode)
     ####################################################
     location / {
         try_files $uri $uri/ @reactfallback;
@@ -56,15 +56,6 @@ server {
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    ####################################################
-    # 以下 location 若您要改成硬寫:
-    # location /auth/ {
-    #   proxy_pass http://your_node_container:3000/auth/;
-    #   proxy_set_header Host $host;
-    # }
-    # 則請自行取捨
-    ####################################################
 
     ####################################################
     # Express => suzoo_express
