--- a/express/package.json
+++ b/express/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "sharp": "^0.32.1",
     "stripe": "^11.12.0",
-    "web3": "^1.10.0"
+    "web3": "^1.10.0",
+    "ethers": "^6.5.1"   
   }
 }
