--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,5 +1,5 @@
 ########################################################
-# upstream 區塊
+# HTTP => 301 => HTTPS
 ########################################################
 upstream suzoo_express {
     server suzoo_express:3000;
@@ -11,9 +11,6 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
-########################################################
-# HTTP => 301 => HTTPS
-########################################################
 server {
     listen 80;
     listen [::]:80;
@@ -22,16 +19,14 @@ server {
 }
 
 ########################################################
-# HTTPS (443)
+# HTTPS
 ########################################################
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # ==========================
-    # SSL 憑證 (Let's Encrypt)
-    # ==========================
+    # SSL
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_session_timeout 5m;
@@ -41,71 +36,42 @@ server {
 
     resolver 127.0.0.11 valid=30s;
 
-    ####################################################
-    # React SPA => suzoo_react
-    # (Dev Server or build mode)
-    ####################################################
+    # React => suzoo_react
     location / {
         try_files $uri $uri/ @reactfallback;
     }
     location @reactfallback {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
     # Express => suzoo_express
-    ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
-
     location /membership/ {
         proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        ...
     }
-
     location /upload/ {
         client_max_body_size 100m;
         proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        ...
     }
-
     location /api/ {
         proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        ...
     }
-
-    ####################################################
-    # FastAPI => suzoo_fastapi
-    ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi/;
-        proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        ...
     }
 }
