--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,16 +1,22 @@
 ########################################################
-# HTTP => 301 => HTTPS
+# upstream 區塊
 ########################################################
 upstream suzoo_express {
+    # Docker Compose 中服務名稱 suzoo_express:3000
     server suzoo_express:3000;
 }
+
 upstream suzoo_react {
     server suzoo_react:3000;
 }
+
 upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
+########################################################
+# HTTP => 301 => HTTPS
+########################################################
 server {
     listen 80;
     listen [::]:80;
@@ -26,7 +32,9 @@ server {
     listen [::]:443 ssl;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL
+    # ========================
+    # SSL 憑證 (Let's Encrypt)
+    # ========================
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
     ssl_session_timeout 5m;
@@ -34,44 +42,69 @@ server {
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
+    # Docker 內部 DNS resolver
     resolver 127.0.0.11 valid=30s;
 
-    # React => suzoo_react
+    ####################################################
+    # React SPA => suzoo_react
+    ####################################################
     location / {
+        # 為避免 rewrite cycle，先嘗試檔案再 fallback
         try_files $uri $uri/ @reactfallback;
     }
     location @reactfallback {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    ####################################################
     # Express => suzoo_express
+    ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
     location /membership/ {
         proxy_pass http://suzoo_express;
-        ...
+        proxy_http_version 1.1;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
     location /upload/ {
         client_max_body_size 100m;
         proxy_pass http://suzoo_express;
-        ...
+        proxy_http_version 1.1;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
     location /api/ {
         proxy_pass http://suzoo_express;
-        ...
+        proxy_http_version 1.1;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
+    ####################################################
+    # FastAPI => suzoo_fastapi
+    ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi/;
-        ...
+        proxy_http_version 1.1;
+        proxy_set_header Host            $host;
+        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 }
