--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -25,7 +25,7 @@ server {
 }
 
 ########################################################
-# HTTPS
+# HTTPS (443)
 ########################################################
 server {
     listen 443 ssl;
@@ -49,7 +49,6 @@ server {
     # React SPA => suzoo_react
     ####################################################
     location / {
-        # 為避免 rewrite cycle，先嘗試檔案再 fallback
         try_files $uri $uri/ @reactfallback;
     }
     location @reactfallback {
