--- a/.env
+++ b/.env
@@ -67,7 +67,7 @@ DATABASE_URL=postgresql://suzoo:KaiShieldDbPass2023!@suzoo_postgres:5432/suzoo
 # Email 寄送 (例如 Gmail SMTP)
 # =====================================
 EMAIL_USER=jeffqqm@gmail.com
-EMAIL_PASS=ydam ngzhkcilljha
+EMAIL_PASS=ydamngzhkcilljha
 
 
 
