--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -2,7 +2,6 @@
 # upstream 區塊
 ########################################################
 upstream suzoo_express {
-    # Docker Compose 中服務名稱 suzoo_express:3000
     server suzoo_express:3000;
 }
 
@@ -71,6 +70,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    # 如果您其他路由掛在 /membership, /profile 等，也如法炮製:
     location /membership/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
@@ -97,7 +97,7 @@ server {
     }
 
     ####################################################
-    # FastAPI => suzoo_fastapi
+    # FastAPI => suzoo_fastapi (只在 /api/py/ ...)
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi/;
