--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -27,8 +27,8 @@ server {
 # HTTPS (443)
 ########################################################
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
     # ========================
@@ -36,10 +36,16 @@ server {
     # ========================
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+
+    # 強化 SSL 設定
     ssl_session_timeout 5m;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_session_cache shared:SSL:50m;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
+
+    # HSTS (建議: production)
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Docker 內部 DNS resolver
     resolver 127.0.0.11 valid=30s;
@@ -48,6 +54,7 @@ server {
     # React SPA => suzoo_react
     ####################################################
     location / {
+        # 為避免重複 rewrite cycle，先嘗試 $uri 再 fallback
         try_files $uri $uri/ @reactfallback;
     }
     location @reactfallback {
@@ -70,7 +77,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 如果您其他路由掛在 /membership, /profile 等，也如法炮製:
+    # 若有其他路由 membership, profile, etc.
     location /membership/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
