--- a/express/package.json
+++ b/express/package.json
@@ -16,11 +16,17 @@
     "dotenv": "^16.0.3",
     "multer": "^1.4.5-lts.1",
     "crypto-js": "^4.1.0",
+
+    /* 注意這裡：改為使用 bcryptjs */
     "bcryptjs": "^2.4.3",
+    // 如果你堅持用 bcrypt，就要在這裡加: "bcrypt": "^5.1.0"
+
     "jsonwebtoken": "^9.0.0",
     "sharp": "^0.32.1",
     "stripe": "^11.12.0",
     "web3": "^1.10.0",
-    "ethers": "^6.5.1"  
+
+    /* ethers 6.x */
+    "ethers": "^6.5.1"
   }
 }
