--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -3,10 +3,10 @@ FROM node:18-slim
 
 WORKDIR /app
 
-# 安裝系統套件(如需)
+# 可加這行，也可不加
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-COPY package.json ./
+COPY package.json package-lock.json ./
 RUN npm install
 
 COPY . .
