--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /app
 # 可加這行，也可不加
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-COPY package.json package-lock.json ./
+COPY package.json ./
 RUN npm install
 
 COPY . .
