--- a/express/package.json
+++ b/express/package.json
@@ -17,9 +17,8 @@
     "multer": "^1.4.5-lts.1",
     "crypto-js": "^4.1.0",
 
-    /* 注意這裡：改為使用 bcryptjs */
+    /* 注意這裡：只使用 bcryptjs，不使用 bcrypt */
     "bcryptjs": "^2.4.3",
-    // 如果你堅持用 bcrypt，就要在這裡加: "bcrypt": "^5.1.0"
 
     "jsonwebtoken": "^9.0.0",
     "sharp": "^0.32.1",
