--- a/express/package.json
+++ b/express/package.json
@@ -8,16 +8,20 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "axios": "^1.3.4",
     "nodemailer": "^6.9.3",
     "cors": "^2.8.5",
     "sequelize": "^6.31.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mailgun-js": "^0.22.0",
     "multer": "^1.4.5-lts.1",
     "crypto-js": "^4.1.0",
+    "sequelize": "^6.28.0"
 
-    /* 注意這裡：只使用 bcryptjs，不使用 bcrypt */
     "bcryptjs": "^2.4.3",
 
     "jsonwebtoken": "^9.0.0",
