--- a/express/package.json
+++ b/express/package.json
@@ -7,26 +7,24 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.3.4",
-    "nodemailer": "^6.9.3",
     "cors": "^2.8.5",
-    "sequelize": "^6.31.0",
+    "crypto-js": "^4.1.0",
+    "dotenv": "^16.0.3",
+    "ethers": "^6.5.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mailgun-js": "^0.22.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "dotenv": "^16.0.3",
-
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
-
-    "multer": "^1.4.5-lts.1",
-    "crypto-js": "^4.1.0",
-
+    "sequelize": "^6.31.0",
     "sharp": "^0.32.1",
     "stripe": "^11.12.0",
     "web3": "^1.10.0",
-    "mailgun-js": "^0.22.0",
 
-    "ethers": "^6.5.1"
+    /* 改用 bcryptjs (不再安裝 bcrypt) */
+    "bcryptjs": "^2.4.3"
   }
 }
