--- a/express/Dockerfile
+++ b/express/Dockerfile
@@ -1,20 +1,15 @@
-# express/Dockerfile
 FROM node:18-alpine
 
-# 建置時的工作目錄
-WORKDIR /usr/src/app
+# Create app directory
+WORKDIR /app
 
-# 先複製 package*.json
+# Install app dependencies
 COPY package*.json ./
-
-# 執行 npm install
 RUN npm install
 
-# 再複製全部源碼
+# Bundle app source
 COPY . .
 
-# 開放埠 (非對外, 給 docker-compose 用)
 EXPOSE 3000
 
-# 預設啟動指令
 CMD ["node", "server.js"]
