--- a/express/package.json
+++ b/express/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "suzoo-express",
+  "name": "express-project",
   "version": "1.0.0",
-  "description": "Express server for suzoo project",
+  "description": "Express project with auth, file upload, blockchain integration, trademark search",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "axios": "^1.3.4",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.0",
-    "dotenv": "^16.0.3",
-    "ethers": "^6.5.1",
-    "express": "^4.18.2",
+    "express": "^4.18.0",
+    "dotenv": "^16.0.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.0",
-    "mailgun-js": "^0.22.0",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.3",
-    "pg": "^8.8.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.31.0",
-    "sharp": "^0.32.1",
-    "stripe": "^11.12.0",
-    "web3": "^1.10.0",
-
-    /* 改用 bcryptjs (不再安裝 bcrypt) */
-    "bcryptjs": "^2.4.3"
+    "multer": "^1.4.5",
+    "axios": "^1.3.0",
+    "cheerio": "^1.0.0",
+    "ethers": "^6.6.0",
+    "node-trademark": "^1.0.0",
+    "mysql2": "^3.2.0",
+    "cors": "^2.8.5"
   }
 }
