--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - suzoo_net
 
   ######################
-  # 3) IPFS
+  # 3) IPFS (Kubo)
   ######################
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
@@ -60,13 +60,13 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health"]
       interval: 10s
       timeout: 5s
       retries: 3
 
   ######################
-  # 5) Express
+  # 5) Express (後端 API)
   ######################
   suzoo_express:
     build:
@@ -88,7 +88,7 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:3000/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/health"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -112,7 +112,7 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
