--- a/express/package.json
+++ b/express/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "express-project",
+  "name": "suzoo-express",
   "version": "1.0.0",
-  "description": "Express project with auth, file upload, blockchain integration, trademark search",
+  "description": "Suzoo Express server with register/login, file upload, blockchain, trademark check, etc.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "dotenv": "^16.0.0",
+    "axios": "^1.3.5",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5",
-    "axios": "^1.3.0",
-    "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "ethers": "^6.6.0",
-    "node-trademark": "^1.0.0",
-    "mysql2": "^3.2.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.31.1",
+    "sharp": "^0.32.1"
   }
 }
