--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,4 +1,4 @@
-# fastapi (or python-based crawler) Dockerfile
+# fastapi/Dockerfile
 FROM python:3.10-slim
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -13,10 +13,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 
 COPY requirements.txt ./
-
-# 關鍵：先升級 pip + 安裝 setuptools + wheel
-RUN pip install --no-cache-dir --upgrade pip setuptools wheel && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir --upgrade pip setuptools wheel
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
