--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -54,7 +54,6 @@ server {
     # React SPA => suzoo_react
     ####################################################
     location / {
-        # 為避免重複 rewrite cycle，先嘗試 $uri 再 fallback
         try_files $uri $uri/ @reactfallback;
     }
     location @reactfallback {
@@ -69,48 +68,24 @@ server {
     ####################################################
     # Express => suzoo_express
     ####################################################
-    location /auth/ {
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # 若有其他路由 membership, profile, etc.
-    location /membership/ {
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /upload/ {
-        client_max_body_size 100m;
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
         proxy_set_header Host            $host;
         proxy_set_header X-Real-IP       $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     ####################################################
-    # FastAPI => suzoo_fastapi (只在 /api/py/ ...)
+    # FastAPI => suzoo_fastapi
     ####################################################
     location /api/py/ {
-        proxy_pass http://suzoo_fastapi/;
+        proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
