--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -51,11 +51,28 @@ server {
     resolver 127.0.0.11 valid=30s;
 
     ####################################################
-    # React SPA => suzoo_react
+    # (A) Express => suzoo_express
+    # 先攔截 /auth/... 走後端
     ####################################################
+    location /auth/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+
+        # 保留客戶端請求的Host和IP等資訊
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    ####################################################
+    # (B) React SPA => suzoo_react (fallback)
+    ####################################################
+    # 若上方路由都沒match，就 fallback 給 React
     location / {
         try_files $uri $uri/ @reactfallback;
     }
+
     location @reactfallback {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
@@ -66,26 +83,27 @@ server {
     }
 
     ####################################################
-    # Express => suzoo_express
+    # (C) 其他 Express API => suzoo_express
+    # 例如 /api/... 走後端
     ####################################################
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host            $host;
-        proxy_set_header X-Real-IP       $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     ####################################################
-    # FastAPI => suzoo_fastapi
+    # (D) FastAPI => suzoo_fastapi
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
