--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    // 開發模式下本地啟動 (熱更新)
     "start": "react-scripts start",
+    // 正式建置產生 /build 資料夾
     "build": "react-scripts build"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "axios": "^1.3.4"
+
+    // ===== 新增 styled-components =====
+    "styled-components": "^5.3.9"
   }
 }
