--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,11 +1,13 @@
-fastapi==0.95.2
-uvicorn==0.22.0
+fastapi==0.95.0
+uvicorn==0.20.0
 requests==2.28.2
-python-dotenv==0.21.1
-pandas==1.5.3
-numpy==1.23.5
-web3==6.2.0
-torch==2.0.0
-transformers==4.27.4
 python-multipart==0.0.5
+pydantic==1.10.7
+cloudinary==1.30.0
+ipfshttpclient==0.8.0a2
+PyJWT==2.6.0
+Pillow==9.4.0
+imagehash==4.3.1
+fpdf==1.7.2
+web3==5.31.3
 psycopg2-binary==2.9.6
