--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 services:
+  ########################################################
+  # 1) PostgreSQL
+  ########################################################
   suzoo_postgres:
     image: postgres:15-alpine
     container_name: suzoo_postgres
@@ -16,6 +19,9 @@ services:
       interval: 5s
       retries: 5
 
+  ########################################################
+  # 2) geth (Ethereum 私有鏈) -- Dev模式
+  ########################################################
   suzoo_geth:
     image: ethereum/client-go:stable
     container_name: suzoo_geth
@@ -35,6 +41,9 @@ services:
     volumes:
       - suzoo_geth_data:/root/.ethereum
 
+  ########################################################
+  # 3) IPFS (go-ipfs)
+  ########################################################
   suzoo_ipfs:
     image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
@@ -47,6 +56,9 @@ services:
     networks:
       - suzoo_net
 
+  ########################################################
+  # 4) FastAPI
+  ########################################################
   suzoo_fastapi:
     build:
       context: ./fastapi
@@ -63,6 +75,9 @@ services:
     networks:
       - suzoo_net
 
+  ########################################################
+  # 5) Express
+  ########################################################
   suzoo_express:
     build:
       context: ./express
@@ -80,6 +95,9 @@ services:
     networks:
       - suzoo_net
 
+  ########################################################
+  # 6) React (前端)
+  ########################################################
   suzoo_react:
     build:
       context: ./frontend
@@ -97,6 +115,9 @@ services:
     networks:
       - suzoo_net
 
+  ########################################################
+  # 7) Nginx (反向代理+SSL)
+  ########################################################
   suzoo_nginx:
     build:
       context: ./nginx
@@ -109,8 +130,11 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    # 在此處掛載:
     volumes:
+      # 將本機檔案 ./nginx/suzoo.conf -> 容器 /etc/nginx/conf.d/suzoo.conf
       - ./nginx/suzoo.conf:/etc/nginx/conf.d/suzoo.conf:ro
+      # 將 /etc/letsencrypt (宿主機) -> 容器 /etc/letsencrypt:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
     networks:
       - suzoo_net
