--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,5 +1,5 @@
 ########################################################
-# upstream 區塊
+# 定義 upstream (Docker 內部服務)
 ########################################################
 upstream suzoo_express {
     server suzoo_express:3000;
@@ -13,6 +13,7 @@ upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
 
+
 ########################################################
 # HTTP => 301 => HTTPS
 ########################################################
@@ -22,6 +23,7 @@ server {
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
     return 301 https://$host$request_uri;
 }
+
 
 ########################################################
 # HTTPS (443)
@@ -37,38 +39,45 @@ server {
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-    # 強化 SSL 設定
+    # ------------------------
+    # 强化 SSL 設定
+    # ------------------------
     ssl_session_timeout 5m;
     ssl_session_cache shared:SSL:50m;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # HSTS (建議: production)
+    # HSTS (建議 production 環境啟用)
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # Docker 內部 DNS resolver
     resolver 127.0.0.11 valid=30s;
 
-    ####################################################
-    # (A) Express => suzoo_express
-    # 先攔截 /auth/... 走後端
-    ####################################################
+    # 大檔案上傳限制(如上傳影片)
+    client_max_body_size 200M;
+
+
+    ########################################################
+    # A) Express Auth (例如 /auth/ 或您自定的 path)
+    ########################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
 
-        # 保留客戶端請求的Host和IP等資訊
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # (B) React SPA => suzoo_react (fallback)
-    ####################################################
-    # 若上方路由都沒match，就 fallback 給 React
+
+    ########################################################
+    # B) React SPA => Fallback
+    #
+    #   - 先嘗試靜態檔 ($uri ...);
+    #   - 若不存在則 fallback 到 @reactfallback 區塊
+    ########################################################
     location / {
         try_files $uri $uri/ @reactfallback;
     }
@@ -76,34 +85,38 @@ server {
     location @reactfallback {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
+
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # (C) 其他 Express API => suzoo_express
-    # 例如 /api/... 走後端
-    ####################################################
+
+    ########################################################
+    # C) 其他 Express API (ex: /api/ ) => suzoo_express
+    ########################################################
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    ####################################################
-    # (D) FastAPI => suzoo_fastapi
-    ####################################################
+
+    ########################################################
+    # D) FastAPI => ex: /api/py/ (可改成 /api/upload/ 或其他路徑)
+    ########################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
