--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,18 +1,15 @@
 ########################################################
-# 定義 upstream (Docker 內部服務)
+# upstream (Docker 內部服務)
 ########################################################
 upstream suzoo_express {
     server suzoo_express:3000;
 }
-
 upstream suzoo_react {
     server suzoo_react:3000;
 }
-
 upstream suzoo_fastapi {
     server suzoo_fastapi:8000;
 }
-
 
 ########################################################
 # HTTP => 301 => HTTPS
@@ -24,7 +21,6 @@ server {
     return 301 https://$host$request_uri;
 }
 
-
 ########################################################
 # HTTPS (443)
 ########################################################
@@ -33,87 +29,67 @@ server {
     listen [::]:443 ssl http2;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # ========================
     # SSL 憑證 (Let's Encrypt)
-    # ========================
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-    # ------------------------
-    # 强化 SSL 設定
-    # ------------------------
+    # 強化 SSL
     ssl_session_timeout 5m;
     ssl_session_cache shared:SSL:50m;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # HSTS (建議 production 環境啟用)
+    # HSTS (production 建議)
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # Docker 內部 DNS resolver
+    # Docker 內部 DNS
     resolver 127.0.0.11 valid=30s;
 
-    # 大檔案上傳限制(如上傳影片)
+    # 大檔上傳限制
     client_max_body_size 200M;
 
-
-    ########################################################
-    # A) Express Auth (例如 /auth/ 或您自定的 path)
-    ########################################################
-    location /auth/ {
-        proxy_pass http://suzoo_express;
-        proxy_http_version 1.1;
-
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-
-    ########################################################
-    # B) React SPA => Fallback
-    #
-    #   - 先嘗試靜態檔 ($uri ...);
-    #   - 若不存在則 fallback 到 @reactfallback 區塊
-    ########################################################
+    ####################################################
+    # 前端 React SPA => fallback
+    ####################################################
     location / {
         try_files $uri $uri/ @reactfallback;
     }
-
     location @reactfallback {
         proxy_pass http://suzoo_react;
         proxy_http_version 1.1;
-
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-
-    ########################################################
-    # C) 其他 Express API (ex: /api/ ) => suzoo_express
-    ########################################################
+    ####################################################
+    # Express /auth/, /api/ => suzoo_express
+    ####################################################
+    location /auth/ {
+        proxy_pass http://suzoo_express;
+        proxy_http_version 1.1;
+        proxy_set_header Host              $host;
+        proxy_set_header X-Real-IP         $remote_addr;
+        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
     location /api/ {
         proxy_pass http://suzoo_express;
         proxy_http_version 1.1;
-
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-
-    ########################################################
-    # D) FastAPI => ex: /api/py/ (可改成 /api/upload/ 或其他路徑)
-    ########################################################
+    ####################################################
+    # FastAPI => /api/py/ (可自由修改 path)
+    ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
         proxy_http_version 1.1;
-
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
