--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,17 +1,4 @@
 ########################################################
-# upstream (Docker 內部服務)
-########################################################
-upstream suzoo_express {
-    server suzoo_express:3000;
-}
-upstream suzoo_react {
-    server suzoo_react:3000;
-}
-upstream suzoo_fastapi {
-    server suzoo_fastapi:8000;
-}
-
-########################################################
 # HTTP => 301 => HTTPS
 ########################################################
 server {
@@ -22,35 +9,46 @@ server {
 }
 
 ########################################################
-# HTTPS (443)
+# HTTPS (443) with SSL
 ########################################################
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
-    # SSL 憑證 (Let's Encrypt)
+    # 內建 Docker DNS
+    resolver 127.0.0.11 valid=30s;
+
+    # Let's Encrypt 憑證
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
-    # 強化 SSL
     ssl_session_timeout 5m;
     ssl_session_cache shared:SSL:50m;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
 
-    # HSTS (production 建議)
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
-    # Docker 內部 DNS
-    resolver 127.0.0.11 valid=30s;
+    # 可加入： add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # 大檔上傳限制
     client_max_body_size 200M;
 
+    ########################################################
+    # upstream (Docker 內部服務)
+    ########################################################
+    upstream suzoo_express {
+        server suzoo_express:3000;
+    }
+    upstream suzoo_react {
+        server suzoo_react:3000;
+    }
+    upstream suzoo_fastapi {
+        server suzoo_fastapi:8000;
+    }
+
     ####################################################
-    # 前端 React SPA => fallback
+    # React 前端 (SPA)，根路徑 => fallback
     ####################################################
     location / {
         try_files $uri $uri/ @reactfallback;
@@ -85,7 +83,7 @@ server {
     }
 
     ####################################################
-    # FastAPI => /api/py/ (可自由修改 path)
+    # FastAPI => /api/py/
     ####################################################
     location /api/py/ {
         proxy_pass http://suzoo_fastapi;
