--- a/nginx/suzoo.conf
+++ b/nginx/suzoo.conf
@@ -1,4 +1,17 @@
 ########################################################
+# upstream (Docker 內部服務) - 一定要放在 server {} 區塊外
+########################################################
+upstream suzoo_express {
+    server suzoo_express:3000;
+}
+upstream suzoo_react {
+    server suzoo_react:3000;
+}
+upstream suzoo_fastapi {
+    server suzoo_fastapi:8000;
+}
+
+########################################################
 # HTTP => 301 => HTTPS
 ########################################################
 server {
@@ -9,11 +22,13 @@ server {
 }
 
 ########################################################
-# HTTPS (443) with SSL
+# HTTPS (443) with SSL + HTTP/2
 ########################################################
 server {
+    # 保留您原本的 listen http2 寫法
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
+
     server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
 
     # 內建 Docker DNS
@@ -23,32 +38,18 @@ server {
     ssl_certificate     /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
 
+    # 加強 SSL
     ssl_session_timeout 5m;
-    ssl_session_cache shared:SSL:50m;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_session_cache   shared:SSL:50m;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
-
-    # 可加入： add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # 大檔上傳限制
     client_max_body_size 200M;
 
-    ########################################################
-    # upstream (Docker 內部服務)
-    ########################################################
-    upstream suzoo_express {
-        server suzoo_express:3000;
-    }
-    upstream suzoo_react {
-        server suzoo_react:3000;
-    }
-    upstream suzoo_fastapi {
-        server suzoo_fastapi:8000;
-    }
-
     ####################################################
-    # React 前端 (SPA)，根路徑 => fallback
+    # React 前端 (SPA) => fallback
     ####################################################
     location / {
         try_files $uri $uri/ @reactfallback;
@@ -63,7 +64,7 @@ server {
     }
 
     ####################################################
-    # Express /auth/, /api/ => suzoo_express
+    # Express 後端 /auth/ /api/
     ####################################################
     location /auth/ {
         proxy_pass http://suzoo_express;
