--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,14 +1,6 @@
-FROM node:14 AS build
-WORKDIR /app
-COPY frontend/package*.json ./
-RUN npm install
-COPY frontend/ ./
-RUN npm run build
+FROM nginx:stable
 
-FROM nginx:latest
-COPY --from=build /app/build /usr/share/nginx/html
+COPY suzoo.conf /etc/nginx/conf.d/suzoo.conf
 
-COPY suzoo.conf /etc/nginx/conf.d/
-
-
-HEALTHCHECK CMD curl -f http://localhost/ || exit 1
+HEALTHCHECK --interval=30s --timeout=5s --retries=3 \
+  CMD curl -f http://localhost/ || exit 1
